# hsl24

./: .gitignore  README.md
kobuki/docker/: Dockerfile  build.bash  into.bash  run.bash  run_master.bash  run_slave.bash  stop.bash
kobuki/simulation/docker/: build.bash  dockerfile  into.bash  name.txt
kobuki/simulation/workspace/: frames_2024-09-26_19.05.29.gv  frames_2024-09-30_00.08.51.gv  frames_2024-09-30_00.09.15.gv  frames_2024-09-30_23.12.18.gv  frames_2024-10-01_00.00.15.gv  frames_2024-10-01_00.01.20.gv  frames_2024-10-01_00.16.17.gv  super_map.pgm  super_map.yaml
kobuki/simulation/workspace/src/cmd_vel_warper/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/cmd_vel_warper/src/: warper.cpp
kobuki/simulation/workspace/src/data_synchronizer/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/data_synchronizer/config/: params_gazebo.yaml  params_realsense.yaml
kobuki/simulation/workspace/src/data_synchronizer/launch/: sync_gazebo.launch.py  sync_realsense.launch.py
kobuki/simulation/workspace/src/data_synchronizer/src/: data_synchronizer.cpp  fake_realsense.cpp  yolo_dispatcher.cpp
kobuki/simulation/workspace/src/dynamic_detector/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/dynamic_detector/config/: params_gazebo.yaml  params_realsense.yaml
kobuki/simulation/workspace/src/dynamic_detector/launch/: detect_gazebo.launch.py  detect_realsense.launch.py
kobuki/simulation/workspace/src/dynamic_detector/src/: dynamic_detector.cpp  obstacles_tracker.cpp  pc2_visualizer.cpp
kobuki/simulation/workspace/src/dynamic_nav_interfaces/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/dynamic_nav_interfaces/msg/: DetectorData.msg  DynamicLayerMsg.msg  MinDistance.msg  ObstaclesFootprints.msg  YoloData.msg
kobuki/simulation/workspace/src/graph_travel/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/graph_travel/src/: goal_pose_publisher.cpp  graph.hpp  points.hpp
kobuki/simulation/workspace/src/graph_travel_2/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/graph_travel_2/src/: goal_pose_publisher.cpp  graph.hpp  points.hpp
kobuki/simulation/workspace/src/localization/: setup.py
kobuki/simulation/workspace/src/localization/config/: params_kobuki.yaml  params_sim.yaml
kobuki/simulation/workspace/src/localization/launch/: localization_sim.launch.py
kobuki/simulation/workspace/src/localization/localization/: localization.py
kobuki/simulation/workspace/src/master/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/master/config/: nav2_params.yaml
kobuki/simulation/workspace/src/master/description/: camera.xacro  depth_camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
kobuki/simulation/workspace/src/master/launch/: launch_cafe.launch.py  launch_sim.launch.py  lidar.launch.py  nav.launch.py  nav2_bringup.launch.py  navigation.launch.py  rviz.launch.py  slam.launch.py  slam_lidar.launch.py  slam_toolbox.launch.py
kobuki/simulation/workspace/src/navigation/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/navigation/config/: behavior_tree.xml  controllers_params_kobuki.yaml  controllers_params_sim.yaml  master_params_kobuki.yaml  master_params_sim.yaml  nav2_params.yaml  params.yaml  rviz.rviz
kobuki/simulation/workspace/src/navigation/launch/: controller.launch.py  controllers_kobuki.launch.py  controllers_sim.launch.py  nav2_bringup.launch.py  navigation.launch.py  slam.launch.py
kobuki/simulation/workspace/src/navigation/src/: controller.cpp  dispatcher.cpp  master_controller.cpp  rviz.rviz
kobuki/simulation/workspace/src/robot/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/robot/description_master/: gazebo_control.xacro  robot.urdf.xacro
kobuki/simulation/workspace/src/robot/launch/: launch_sim.launch.py  rsp_master.launch.py  rsp_slave.launch.py
kobuki/simulation/workspace/src/robot/worlds/: cafe.world  maze2.world.template
kobuki/simulation/workspace/src/slave/: CMakeLists.txt  package.xml
kobuki/simulation/workspace/src/slave_controller/: package.xml
kobuki/simulation/workspace/src/yolo/: package.xml  setup.py
kobuki/workspace/src/localization/: package.xml  setup.py
kobuki/workspace/src/localization/launch/: localization.launch.py  localization_kobuki.launch.py
kobuki/workspace/src/localization/localization/: localization.py
kobuki/workspace/src/master/config/: mapper_params_online_async.yaml  nav2_params.yaml  rviz.rviz
kobuki/workspace/src/master/launch/: launch_sim.launch.py  launch_sim_2.launch.py  lidar.launch.py  rsp.launch.py
kobuki/workspace/src/master/worlds/: height_converter2.sh  maze.world  maze.world.template  test.world
kobuki/workspace/src/navigation/: CMakeLists.txt
kobuki/workspace/src/navigation/config/: controllers_params_kobuki.yaml  controllers_params_sim.yaml  nav2_params.yaml  rviz.rviz
kobuki/workspace/src/navigation/launch/: controllers_kobuki.launch.py  rviz.launch.py  slam.launch.py
kobuki/workspace/src/navigation/src/: dispatcher.cpp  master_controller.cpp
kobuki/workspace/src/rplidar_ros/launch/: rplidar.launch.py
kobuki/workspace/src/slave_controller/: setup.cfg  setup.py
simulation/docker/: build.bash  dockerfile  name.txt  run.bash  stop.bash
simulation/workspace/src/explore_lite/config/: params.yaml
simulation/workspace/src/explore_lite/src/: explore.cpp
simulation/workspace/src/robot_msgs/: CMakeLists.txt
simulation/workspace/src/robot_msgs/msg/: StringMultiArray.msg
simulation/workspace/src/solution/: package.xml  setup.py
simulation/workspace/src/solution/config/: behavior_tree.xml  mapper_params_online_async.yaml  nav2_params.yaml  rviz_params.rviz  slam_params.yaml  slam_toolbox.rviz
simulation/workspace/src/solution/launch/: bringup.launch.py  explore.launch.py  nav2_bringup.launch.py  navigation.launch.py  slam.launch.py
simulation/workspace/src/solution/solution/: qr_detector.py
simulation/workspace/src/survey/: package.xml
simulation/workspace/src/survey/launch/: ozyland.launch.py
(+23 files in other folders)
