<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_synchronizer</name>
  <version>0.0.0</version>
  <description>package for sync rgb, depth, mask and odom for rtabmap</description>
  <maintainer email="artemkondratev5@gmail.com">artem-kondratew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_nav_interfaces</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
